# hwtest

./: CMakeLists.txt  README.md
include/openspot/: spi.h
include/sdnova/: spi.h
src/: main.cc  spi.cc
